# GC-Laboratorio-3

./: CMakeLists.txt  README.md
src/: color.h  fragment.h  gl.h  main.cpp  shaders.h  triangle.h  uniforms.h
